try to prevent zoom on double tap on mobile

--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ body {
 
 button {
   color: #222;
+  touch-action: manipulation;
 }
 
 #gameboard, #keyboard {
